<resources>
    <string name="app_name">Seguridad</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">tu nombre:</string>
    <string name="email">tu email:</string>
    <string name="aceptar">Aceptar</string>
    <string name="response">Response</string>
    <string name="params">Params</string>
    <string name="send">Send</string>
    <string name="resultado">Send</string>
    <string name="hola">Hola</string>
    <string name="adios">Adios</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Pass</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_post">Sign in Post</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="resume">resume...</string>
    <string name="title_activity_pos_app">PosAppActivity</string>
    <string name="title_activity_cge">CgeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="locationTxt">Notifications</string>
    <string name="title_activity_encode">EncodeActivity</string>
</resources>
