<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_margin="20dp"
        tools:padding="15dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/longitudeTextGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="longitude"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/latitudeTextGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/longitudeTextGPS"
                android:text="latitude"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/latitudeValueGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/longitudeValueGPS"
                android:layout_toRightOf="@id/longitudeTextGPS"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="0.0000"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/longitudeValueGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/longitudeTextGPS"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="0.0000"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/longitudeValueNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="0.0000"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/latitudeValueNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/longitudeValueNetwork"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="0.0000"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/latitudeValueBest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/longitudeValueBest"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="0.0000"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/longitudeValueBest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/locationControllerBest"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="0.0000"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/locationControllerBest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>